Добавлены описания новых апи
