# backend/src/main/java/ru/neoflex/educationplatform/model/Lesson.java
@@ -5,8 +5,6 @@ import lombok.Builder;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
-import ru.neoflex.educationplatform.model.enums.ContentType;
-import ru.neoflex.educationplatform.model.enums.LessonStatus;
 
 import javax.persistence.Column;
 import javax.persistence.Entity;
@@ -53,7 +51,7 @@ public class Lesson {
     private Boolean isPrivate = false;
 
     @Column(name = "content_type", nullable = false)
-    private ContentType contentType;
+    private String contentType;
 
     @Column(name = "content", nullable = false)
     private String content;
@@ -69,7 +67,7 @@ public class Lesson {
     private LocalDate publicationDate;
 
     @Column(name = "status", nullable = false)
-    private LessonStatus status;
+    private String status;
 
     @OneToMany(mappedBy = "lesson")
     private Set<UserLessonLink> userLessonLinks = new LinkedHashSet<>();
