# backend/src/main/resources/openapi/openapi.yml
@@ -142,13 +142,201 @@ paths:
         "200":
           description: OK
 
-#  /courses/{id}/lessons:
-#  /lessons/{id}:
-#  /lessons/{id}/tasks:
-#
+  /courses/{id}/lessons:
+    get:
+      tags:
+        - courses
+      summary: вернуть все уроки курса
+      operationId: getLessonsByCourseId
+      parameters:
+        - name: id
+          in: path
+          description: Course id
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/LessonAllInfo"
+
+  /lessons:
+    post:
+      tags:
+        - lessons
+      summary: создать/обновить урок
+      operationId: updateLessons
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/LessonsRequestDto"
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/LessonAllInfo"
+
+
+  /lessons/{id}:
+    get:
+      tags:
+        - lessons
+      summary: вернуть урок по id
+      operationId: getLesson
+      parameters:
+        - name: id
+          in: path
+          description: Lesson id
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/LessonAllInfo"
+
+    delete:
+      tags:
+        - lessons
+      summary: удалить урок по id
+      operationId: deleteLesson
+      parameters:
+        - name: id
+          in: path
+          description: Lesson id
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: OK
+
+
+  /lessons/{id}/tasks:
+    get:
+      tags:
+        - lessons
+      summary: вернуть все задачи урока
+      operationId: getTasksByLessonId
+      parameters:
+        - name: id
+          in: path
+          description: Lesson id
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/TasksAllInfo"
+
 #  /task:
 #  /task/{id}:
 #  /task/{id}/questions:
+
+  /tasks:
+    post:
+      tags:
+        - tasks
+      summary: создать/обновить задачу/тест
+      operationId: saveOrUpdateTask
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/TaskRequestDto"
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/TasksAllInfo"
+
+
+  /tasks/{id}:
+    get:
+      tags:
+        - tasks
+      summary: вернуть задачу/тест по id
+      operationId: getTaskById
+      parameters:
+        - name: id
+          in: path
+          description: Task id
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/TasksAllInfo"
+    delete:
+      tags:
+        - tasks
+      summary: удалить задачу/тест по id
+      operationId: deleteTask
+      parameters:
+        - name: id
+          in: path
+          description: Lesson id
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: OK
+
+  /tasks/{id}/questions:
+    get:
+      tags:
+        - tasks
+      summary: вернуть все вопросы этого теста/задачи
+      operationId: getQuestionsByTaskId
+      parameters:
+        - name: id
+          in: path
+          description: Lesson id
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/QuestionAllInfo"
 
 #  /questions:
 #  /questions/{id}:
@@ -184,7 +372,7 @@ components:
       type: object
       required:
         - firstName
-        - lastNaame
+        - lastName
         - email
         - birthdate
         - phone
@@ -195,7 +383,7 @@ components:
           format: int64
         firstName:
           type: string
-        lastNaame:
+        lastName:
           type: string
         email:
           type: string
@@ -219,7 +407,7 @@ components:
       type: object
       required:
         - firstName
-        - lastNaame
+        - lastName
         - email
         - birthdate
         - phone
@@ -230,7 +418,7 @@ components:
           format: int64
         firstName:
           type: string
-        lastNaame:
+        lastName:
           type: string
         email:
           type: string
@@ -313,7 +501,7 @@ components:
         interestTags:
           type: array
           items:
-            $ref: "#/components/schemas/InterestTagDto"
+            $ref: "#/components/schemas/SimpleResponseDto"
 
     InterestTagDto:
       type: object
@@ -326,6 +514,157 @@ components:
           format: int64
         name:
           type: string
+
+    LessonAllInfo:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        startDate:
+          type: string
+          format: date
+        duration:
+          type: integer
+        courseId:
+          type: integer
+          format: int64
+        isPrivate:
+          type: boolean
+        contentType:
+          type: string
+          enum:
+            - image
+            - video
+            - text
+        content:
+          type: string
+        teacher:
+          type: integer
+          format: int64
+        cover:
+          type: string
+        publicationDate:
+          type: string
+          format: date
+        status:
+          type: string
+          enum:
+            - open
+            - close
+        author:
+          type: integer
+          format: int64
+
+    TasksAllInfo:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        lessonId:
+          type: integer
+          format: int64
+        deadline:
+          type: string
+          format: date-time
+        description:
+          type: string
+
+    QuestionAllInfo:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        task_id:
+          type: integer
+          format: int64
+        questionText:
+          type: string
+        answers:
+          type: array
+          items:
+            $ref: "#/components/schemas/SimpleResponseDto"
+
+    LessonsRequestDto:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        startDate:
+          type: string
+          format: date
+        duration:
+          type: integer
+        courseId:
+          type: integer
+          format: int64
+        isPrivate:
+          type: boolean
+        contentType:
+          type: string
+          enum:
+            - image
+            - video
+            - text
+        content:
+          type: string
+        teacher:
+          type: integer
+          format: int64
+        cover:
+          type: string
+        status:
+          type: string
+          enum:
+            - open
+            - close
+        author:
+          type: integer
+          format: int64
+
+    TaskRequestDto:
+      type: object
+      required:
+        - name
+        - description
+        - deadline
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+        deadline:
+          type: string
+          format: date-time
+        description:
+          type: string
+        questions:
+          type: array
+          items:
+            $ref: "#/components/schemas/SimpleResponseDto"
+
+    SimpleResponseDto:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        name:
+          type: string
+
+
+
+
+
+
 
 
 
